test/conformance/kuttl/mutate/refactor/inject-env-var-from-image-label/02-resource.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- resource.yaml
assert:
- resource-mutated.yaml
