test/conformance/kuttl/mutate/refactor/inject-env-var-from-image-label/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: inject-env-var-from-image-label
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
