test/conformance/kuttl/mutate/refactor/inject-env-var-from-image-label/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: testpodlabel
  namespace: inject-env-var-from-image-label
spec:
  containers:
  - name: nginx
    image: docker.io/nginx@sha256:63b44e8ddb83d5dd8020327c1f40436e37a6fffd3ef2498a6204df23be6e7e94
